--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: UltimateDispenser
-main: com.selonianth.ultimatedispenser.ultimatedispenser
+main: com.selonianth.ultimatedispenser.UltimateDispenser
 author: Selonianth
 version: 1.0.0
 database: false
